--- a/min1120.css
+++ b/min1120.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-@media (min-width: 1120px)and (max-width: 2000px){
+@media (min-width: 1120px){
 .header {
 	display: inline;
 }
