--- a/style.css
+++ b/style.css
@@ -163,7 +163,11 @@ body{
     cursor: pointer;
 }
 
-.buttons__center img {
+.buttons__center > li > button {
+	background: none;
+}
+
+.buttons__center > li > button > img {
 	width: 20px;
 	height: 20px;
 	vertical-align: middle;
