--- a/min1120.css
+++ b/min1120.css
@@ -1,74 +1,73 @@
 @charset "utf-8";
 
-@media (min-width: 1120px){
-.header {
-	display: inline;
-}
-	
-.buttons__right > li > button > span {
-	display: flex;
-}
-	
-.buttons__right > li > button {
-	width: 200px;
-}
+@media (min-width: 1120px) {
+  .header {
+    display: inline;
+  }
 
-	
-.clearfix {
-  content: "";
-  clear: both;
-}
-	
-.header__title {
-	width: 50%;
-	float: left;
-}
+  .header__btns--right > li > button > span {
+    display: flex;
+  }
 
-.header__nav-buttons {
-	width: 50%;
-	float: right;
-	background-color: #F8F8F8;
-}
+  .header__btns--right > li > button {
+    width: 200px;
+  }
 
-.header__buttons-left {
-	display: none;	
-}
+  .clearfix {
+    content: "";
+    clear: both;
+  }
 
-.buttons__divider {
-	display: none;
-}	
+  .header__title {
+    width: 50%;
+    float: left;
+  }
 
-.content__nav-slides {
+  .header__nav-buttons {
+    width: 50%;
+    float: right;
+    background-color: #f8f8f8;
+  }
+
+  .header__buttons--left {
+    display: none;
+  }
+
+  .buttons__divider {
+    display: none;
+  }
+
+  .content__nav-slides {
     flex-wrap: wrap;
     overflow: hidden;
-	row-gap: 15px;
-}
-	
-.content {
-	align-items: flex-start;
-	column-gap: 36px;
-}
-	
-.content__block {
+    row-gap: 15px;
+  }
+
+  .content {
+    align-items: flex-start;
+    column-gap: 36px;
+  }
+
+  .content__block {
     padding: 0px;
     flex-direction: column;
-	width: 40%;
-}
+    width: 40%;
+  }
 
-.content__block-text p {
-	line-height: 20px;
-}
-	
-.content__block-text p:last-child {
+  .content__block-text p {
+    line-height: 20px;
+  }
+
+  .content__block-text p:last-child {
     display: flex;
-	overflow-y: hidden;
-}
+    overflow-y: hidden;
+  }
 
-.content__img {
-	width: 40%;
-}
+  .content__img {
+    width: 40%;
+  }
 
-.content__img img {
-		border-radius: 6px;
-}
+  .content__img img {
+    border-radius: 6px;
+  }
 }
