--- a/menu.css
+++ b/menu.css
@@ -1,199 +1,200 @@
 @keyframes menu {
-    to {
-        transform: translateX(320px);
-        -webkit-transform: translateX(320px);
-        -moz-transform: translateX(320px);
-        -ms-transform: translateX(320px);
-        -o-transform: translateX(320px);
-}
+  to {
+    transform: translateX(320px);
+    -webkit-transform: translateX(320px);
+    -moz-transform: translateX(320px);
+    -ms-transform: translateX(320px);
+    -o-transform: translateX(320px);
+  }
 }
 
 body {
-    animation-name: menu;
-    animation-duration: 2s;
-    animation-fill-mode: forwards;
-    animation-iteration-count: 1;
+  animation-name: menu;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: 1;
 
-    position: absolute;
-    top: 0;
-    left: -320px;
-    width: 320px;
-    height: 100%;
-    background: #FFFFFF;
-    box-shadow: 16px 0px 52px rgba(14, 24, 80, 0.2);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    font-family: 'TT Lakes';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 24px;
-    /*identicaltoboxheight,or150%*/letter-spacing: -0.2px;
-    color: #1B1C21;
+  position: absolute;
+  top: 0;
+  left: -320px;
+  width: 320px;
+  height: 100%;
+  background: #ffffff;
+  box-shadow: 16px 0px 52px rgba(14, 24, 80, 0.2);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  font-family: "TT Lakes";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  /*identicaltoboxheight,or150%*/
+  letter-spacing: -0.2px;
+  color: #1b1c21;
 }
 
 .header {
-    display: flex;
-    flex-direction: column;
-    padding: 18px 24px;
-    row-gap: 46px;
+  display: flex;
+  flex-direction: column;
+  padding: 18px 24px;
+  row-gap: 46px;
 }
 
 .header__btns {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .header__btns--left {
-    width: 55%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  width: 55%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .btn {
-    position: relative;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    flex-shrink: 0;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background: #ff3e79;
-    cursor: pointer;
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: #ff3e79;
+  cursor: pointer;
 }
 
 .btn:hover {
-    filter: opacity(0.5);
-    -webkit-filter: opacity(0.5);
-    transition: filter 0.8s ease-in-out;
-    -webkit-transition: filter 0.8s ease-in-out;
-    -moz-transition: filter 0.8s ease-in-out;
-    -ms-transition: filter 0.8s ease-in-out;
-    -o-transition: filter 0.8s ease-in-out;
+  filter: opacity(0.5);
+  -webkit-filter: opacity(0.5);
+  transition: filter 0.8s ease-in-out;
+  -webkit-transition: filter 0.8s ease-in-out;
+  -moz-transition: filter 0.8s ease-in-out;
+  -ms-transition: filter 0.8s ease-in-out;
+  -o-transition: filter 0.8s ease-in-out;
 }
 
 .header__burger--close {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .burger__line {
-    position: relative;
-    height: 2px;
-    border-radius: 1px;
-    background-color: #fff;
+  position: relative;
+  height: 2px;
+  border-radius: 1px;
+  background-color: #fff;
 }
 
 .burger__line-top {
-    width: 21px;
-    transform: translateX(0) translateY(1px) rotate(45deg);
+  width: 21px;
+  transform: translateX(0) translateY(1px) rotate(45deg);
 }
 
 .burger__line-bot {
-    width: 21px;
-    transform: translateX(0) translateY(-1px) rotate(-45deg);
+  width: 21px;
+  transform: translateX(0) translateY(-1px) rotate(-45deg);
 }
 
 /* MAIN */
 .content__nav {
-    width: 100%;
+  width: 100%;
 }
 
 .content__nav-slides {
-    display: flex;
-    flex-direction: column;
-    row-gap: 32px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 32px;
 }
 
 .content__nav-slides > li {
-    display: flex;
+  display: flex;
 }
 
 .content__nav-slides > li > a {
-    text-decoration: none;
-    color: #1B1C21;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+  text-decoration: none;
+  color: #1b1c21;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .content__nav-slides > li > a:hover {
-    color: #7E7E82;
+  color: #7e7e82;
 }
 
 .content__nav-slides .nav-slide--active {
-    color: #7E7E82;
+  color: #7e7e82;
 }
 
 .nav-slide--active::before {
-    color: #7E7E82;
-    position: absolute;
-    content: "";
-    left: 0px;
-    width: 4px;
-    height: 40px;
-	margin-right: 12px;
-    background-color: #41f6d7;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
+  color: #7e7e82;
+  position: absolute;
+  content: "";
+  left: 0px;
+  width: 4px;
+  height: 40px;
+  margin-right: 12px;
+  background-color: #41f6d7;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 
 /* FOOTER */
 .footer {
-    display: flex;
-    flex-direction: column;
-    padding-left: 24px;
+  display: flex;
+  flex-direction: column;
+  padding-left: 24px;
 }
 
 .footer__btns {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    column-gap: 16px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  column-gap: 16px;
 }
 
 .footer__mail {
-    padding-top: 16px;
+  padding-top: 16px;
 }
 
 .footer__phone {
-    padding-top: 12px;
+  padding-top: 12px;
 
-    font-family: 'TT Lakes';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 32px;
-/* identical to box height, or 133% */
+  font-family: "TT Lakes";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 32px;
+  /* identical to box height, or 133% */
 
-    letter-spacing: -0.6px;
+  letter-spacing: -0.6px;
 
-    color: #1B1C21;
+  color: #1b1c21;
 }
 
 .footer__lang {
-    padding-top: 40px;
-    display: flex;
-    flex-direction: row;
-    column-gap: 7px;
+  padding-top: 40px;
+  display: flex;
+  flex-direction: row;
+  column-gap: 7px;
 }
 
 .footer__lang--active {
-    color: #7E7E82;
+  color: #7e7e82;
 }
 
 .footer__lang > li > a:hover {
-    color: #7E7E82;
+  color: #7e7e82;
 }
 
 .footer__lang > li > a:active {
-    color: #7E7E82;
+  color: #7e7e82;
 }
