--- a/min768.css
+++ b/min768.css
@@ -1,49 +1,49 @@
-@media (min-width: 768px) and (max-width: 1119px){
-.buttons__divider--first {
-	display: flex;
-}
-	
-.header__buttons-left {
-	width: 25%;
-}
-
-.header__buttons{
-	justify-content: space-around;
-}
-
-.buttons__center {
+@media (min-width: 768px) and (max-width: 1119px) {
+  .buttons__divider--first {
     display: flex;
-}
-	
-.buttons__right{
-	width: 40%;
-}
+  }
 
-.content {
-	align-items: flex-start;
-	column-gap: 48px;
-}
+  .header__buttons--left {
+    width: 25%;
+  }
 
-.content__block {
+  .header__buttons {
+    justify-content: space-around;
+  }
+
+  .header__btns--mid {
+    display: flex;
+  }
+
+  .header__btns--right {
+    width: 40%;
+  }
+
+  .content {
+    align-items: flex-start;
+    column-gap: 48px;
+  }
+
+  .content__block {
     padding: 0px;
     flex-direction: column;
-	width: 45%;
-}
+    width: 45%;
+  }
 
-.content__block-text p {
-	line-height: 20px;
-}
-	
-.content__block-text p:last-child {
+  .content__block-text p {
+    line-height: 20px;
+  }
+
+  .content__block-text p:last-child {
     display: flex;
-	overflow-y: hidden;
-}
+    overflow-y: hidden;
+  }
 
-.content__img {
-	width: 45%;
-}
+  .content__img {
+    width: 45%;
+  }
 
-.content__img img {
-	border-radius: 6px;
-}
+  .content__img img {
+    border-radius: 6px;
+  }
 }
