--- a/style.css
+++ b/style.css
@@ -1,416 +1,413 @@
 /* FONTS */
 @font-face {
-    font-family: 'TT Lakes';
-    src: url('./font/TTLakes-Bold.eot');
-    src: local('TT Lakes Bold'), local('TTLakes-Bold'),
-        url('./font/TTLakes-Bold.eot') format('embedded-opentype'),
-        url('./font/TTLakes-Bold.woff') format('woff'),
-        url('./font/TTLakes-Bold.ttf') format('truetype');
-    font-weight: bold;
-    font-style: normal;
+  font-family: "TT Lakes";
+  src: url("./font/TTLakes-Bold.eot");
+  src: local("TT Lakes Bold"), local("TTLakes-Bold"),
+    url("./font/TTLakes-Bold.eot") format("embedded-opentype"),
+    url("./font/TTLakes-Bold.woff") format("woff"),
+    url("./font/TTLakes-Bold.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'TT Lakes';
-    src: url('./font/TTLakes-Medium.eot');
-    src: local('TT Lakes Medium'), local('TTLakes-Medium'),
-        url('./font/TTLakes-Medium.eot') format('embedded-opentype'),
-        url('./font/TTLakes-Medium.woff') format('woff'),
-        url('./font/TTLakes-Medium.ttf') format('truetype');
-    font-weight: 500;
-    font-style: normal;
+  font-family: "TT Lakes";
+  src: url("./font/TTLakes-Medium.eot");
+  src: local("TT Lakes Medium"), local("TTLakes-Medium"),
+    url("./font/TTLakes-Medium.eot") format("embedded-opentype"),
+    url("./font/TTLakes-Medium.woff") format("woff"),
+    url("./font/TTLakes-Medium.ttf") format("truetype");
+  font-weight: 500;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'TT Lakes';
-    src: url('./font/TTLakes-Regular.eot');
-    src: local('TT Lakes Regular'), local('TTLakes-Regular'),
-        url('./font/TTLakes-Regular.eot') format('embedded-opentype'),
-        url('./font/TTLakes-Medium.woff') format('woff'),
-        url('./font/TTLakes-Regular.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+  font-family: "TT Lakes";
+  src: url("./font/TTLakes-Regular.eot");
+  src: local("TT Lakes Regular"), local("TTLakes-Regular"),
+    url("./font/TTLakes-Regular.eot") format("embedded-opentype"),
+    url("./font/TTLakes-Medium.woff") format("woff"),
+    url("./font/TTLakes-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
 
-body{
-    overflow: hidden;
-	background: #f8f8f8;
+body {
+  overflow: hidden;
+  background: #f8f8f8;
 }
 
 /* HEADER */
- .header {
-    display: flex;
-	flex-wrap: wrap;
-	justify-content: space-around;
-    align-items: center;
-    background-color: #F8F8F8;
- }
-
- .header__nav-buttons {
-    background: #FFF;
-    display: flex;
-	flex-wrap: nowrap;
-	justify-content: space-around;
-    align-items: center;
-    width: 100%;
-    padding: 18px 0px;
- }
-
-.header__buttons-left {
-    display: flex;
-	flex-wrap: nowrap;
-	justify-content: space-around;
-    align-items: center;
-	width: 50%;
+.header {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #f8f8f8;
 }
 
- /* BURGER */
+.header__nav-buttons {
+  background: #fff;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  padding: 18px 0px;
+}
 
- .burger {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-shrink: 0;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background-color: #ff3e79;
-    cursor: pointer;
+.header__buttons-left {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  align-items: center;
+  width: 50%;
+}
+
+/* BURGER */
+
+.burger {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #ff3e79;
+  cursor: pointer;
 }
 
 .burger__lines--open {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 16px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 16px;
 }
 
-.header__burger ul>li {
-	list-style: none;
-    position: relative;
-    height: 2px;
-    border-radius: 1px;
-    background-color: #fff;
+.header__burger ul > li {
+  list-style: none;
+  position: relative;
+  height: 2px;
+  border-radius: 1px;
+  background-color: #fff;
 }
 
 .burger__line-top {
-    width: 18px;
-	margin-bottom: 5px;
+  width: 18px;
+  margin-bottom: 5px;
 }
 
 .burger__line-mid {
-    width: 10px;
-	margin-bottom: 5px;
+  width: 10px;
+  margin-bottom: 5px;
 }
 
 .burger__line-bot {
-    width: 14px;
+  width: 14px;
 }
 
 /* LOGO */
 .header__logo {
-	width: 96.55px;
-	height: 50.81px;
+  width: 96.55px;
+  height: 50.81px;
 }
 
 /* DIVIDER */
 .buttons__divider--first {
-	display: none;
-    width: 2px;
-    height: 32px;
-    background: #EAEAEA;
-    border-radius: 1px;
+  display: none;
+  width: 2px;
+  height: 32px;
+  background: #eaeaea;
+  border-radius: 1px;
 }
 
 .buttons__divider {
-	display: flex;
-    width: 2px;
-    height: 32px;
+  display: flex;
+  width: 2px;
+  height: 32px;
 }
 
-
-
 .header__divider {
-	display: flex;
-    width: 2px;
-    height: 32px;
-    background: #EAEAEA;
-    border-radius: 1px;
+  display: flex;
+  width: 2px;
+  height: 32px;
+  background: #eaeaea;
+  border-radius: 1px;
 }
 
 /* RIGHT BUTTONS */
 
-.header__buttons{
-	width: 50%;
-	list-style: none;
-	display: flex;
-    align-items: center;
-	justify-content: space-around;
-    right: 0;
+.header__buttons {
+  width: 50%;
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  right: 0;
 }
 
-.buttons__center {
-    display: none;
-    align-items: center;
-    justify-content: center;
-    flex-shrink: 0;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background-color: #ff3e79;
-    cursor: pointer;
+.header__btns--mid {
+  display: none;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #ff3e79;
+  cursor: pointer;
 }
 
-.buttons__center > li > button {
-	background: none;
+.header__btns--mid > li > button {
+  background: none;
 }
 
-.buttons__center > li > button > img {
-	width: 20px;
-	height: 20px;
-	vertical-align: middle;
+.header__btns--mid > li > button > img {
+  width: 20px;
+  height: 20px;
+  vertical-align: middle;
 }
 
-
-.buttons__right {
-	width: 100%;
-    display: flex;
-    align-content: center;
-    justify-content: space-around;
+.header__btns--right {
+  width: 100%;
+  display: flex;
+  align-content: center;
+  justify-content: space-around;
 }
-
-
 
 .btn-img {
-	display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-shrink: 0;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background-color: #ff3e79;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #ff3e79;
 }
 
-.buttons__right > li > button > span {
-	display: none;
-	white-space: nowrap;
-	font-family: 'TT Lakes';
-	font-style: normal;
-	font-weight: 500;
-	font-size: 16px;
-	line-height: 24px;
-/* identical to box height, or 150% */
+.header__btns--right > li > button > span {
+  display: none;
+  white-space: nowrap;
+  font-family: "TT Lakes";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  /* identical to box height, or 150% */
 
-	text-align: right;
-	letter-spacing: -0.2px;
+  text-align: right;
+  letter-spacing: -0.2px;
 
-	color: #1B1C21;
-	
-	margin-left: -50px;
+  color: #1b1c21;
+
+  margin-left: -50px;
 }
 
-.buttons__right > li > button {
-	background: none;
-	display: flex;
-	flex-direction: row;
-    align-items: center;
-    justify-content: center;
-	column-gap: 8px;
-    cursor: pointer;
+.header__btns--right > li > button {
+  background: none;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  column-gap: 8px;
+  cursor: pointer;
 }
 
-.buttons__right > li > button > img {
-	width: 20px;
-	height: 20px;
+.header__btns--right > li > button > img {
+  width: 20px;
+  height: 20px;
 }
 
 /* TITLE */
 .header__title {
-    width: 100%;
-	min-width: 320px;
-    border-top: 1px solid #d9fff5;;
-	display: flex;
-    align-items: flex-start;
-	background: #F8F8F8;
-    padding-top: 24px;
-    
+  width: 100%;
+  min-width: 320px;
+  border-top: 1px solid #d9fff5;
+  display: flex;
+  align-items: flex-start;
+  background: #f8f8f8;
+  padding-top: 24px;
 }
 
 .header__title::before {
-	content: "";
-    top: 0px;
-    left: 0px;
-    width: 4px;
-    height: 40px;
-	margin-right: 12px;
-    background-color: #41f6d7;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
+  content: "";
+  top: 0px;
+  left: 0px;
+  width: 4px;
+  height: 40px;
+  margin-right: 12px;
+  background-color: #41f6d7;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 
 .header__title h1 {
-	font-family: 'TT Lakes';
-	font-style: normal;
-	font-weight: 700;
-	font-size: 28px;
-	line-height: 40px;
-/* identical to box height, or 143% */
+  font-family: "TT Lakes";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 40px;
+  /* identical to box height, or 143% */
 
-	letter-spacing: -0.6px;
+  letter-spacing: -0.6px;
 
-	color: #1B1C21;
+  color: #1b1c21;
 }
 
 /* NAV */
 .content {
-display:flex;
-padding: 24px 16px;
+  display: flex;
+  padding: 24px 16px;
 }
 
 .content__nav {
-    display: flex;
-    overflow: auto;
+  display: flex;
+  overflow: auto;
 }
 
 .content__nav-slides::after {
-    content: '';
-	position: absolute;
-	right: 0px;
-	width: 24px;
-	height: 40px;
-    background: linear-gradient(270deg, #F8F8F8 16.84%, rgba(248, 248, 248, 0.0001) 100%);
+  content: "";
+  position: absolute;
+  right: 0px;
+  width: 24px;
+  height: 40px;
+  background: linear-gradient(
+    270deg,
+    #f8f8f8 16.84%,
+    rgba(248, 248, 248, 0.0001) 100%
+  );
 }
 
 .content__nav-slides {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    white-space: nowrap;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  white-space: nowrap;
+  align-items: center;
 }
 
 .content__nav-slides > li {
-    display: flex;
-    flex-shrink: 0;
+  display: flex;
+  flex-shrink: 0;
 }
 
 .content__nav-slides > li > a {
-    text-decoration: none;
-    overflow-x: auto;
-    margin-right: 20px;
-    font-family: 'TT Lakes';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing: -0.2px;
-    
-    color: #7E7E82;
+  text-decoration: none;
+  overflow-x: auto;
+  margin-right: 20px;
+  font-family: "TT Lakes";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: -0.2px;
+
+  color: #7e7e82;
 }
 
 .content__nav-slides > li > a:hover {
-    padding: 8px 16px 8px 9px;
-    background: #FFFFFF;
-    border: 2px solid rgb(184, 255, 236);
-    border-radius: 6px;
-    transition: all 0.4s ease-out;
+  padding: 8px 16px 8px 9px;
+  background: #ffffff;
+  border: 2px solid rgb(184, 255, 236);
+  border-radius: 6px;
+  transition: all 0.4s ease-out;
 }
 
 .content__nav-slides > li > a:active {
-    background: #FFFFFF;
-    border: 2px solid rgb(184, 255, 236);
-    border-radius: 6px;
+  background: #ffffff;
+  border: 2px solid rgb(184, 255, 236);
+  border-radius: 6px;
 }
 
 .content__nav-slides > li > a:visited {
-	padding: 0;
-    background: none;
-    border: none;
+  padding: 0;
+  background: none;
+  border: none;
 }
-  
+
 /* MAIN */
 .content {
-	width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    background: #F8F8F8;
-    row-gap: 16px;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  background: #f8f8f8;
+  row-gap: 16px;
 }
 
 .content__block {
-    padding: 0 16px;
-    display: flex;
-    flex-direction: column;
-    align-content: flex-start;
-    row-gap: 16px;
+  padding: 0 16px;
+  display: flex;
+  flex-direction: column;
+  align-content: flex-start;
+  row-gap: 16px;
 }
 
 .content__block-text {
-    display: flex;
-    flex-direction: column;
-    max-height: 160px;
-    row-gap: 24px;
+  display: flex;
+  flex-direction: column;
+  max-height: 160px;
+  row-gap: 24px;
 }
 
 .content__block-text p {
-    font-family: 'TT Lakes';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 18px;
-/* or 129% */
+  font-family: "TT Lakes";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+  /* or 129% */
 
-    letter-spacing: 0.2px;
+  letter-spacing: 0.2px;
 
-    color: #1B1C21;
+  color: #1b1c21;
 }
 
 .content__block-text p:last-child {
-    display: none;
+  display: none;
 }
 
 .content__btn {
-    display: flex;
-    flex-direction: row;
-    align-content: center;
-    background: none;
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  background: none;
 
-    font-family: 'TT Lakes';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 24px;
-/* identical to box height, or 150% */
+  font-family: "TT Lakes";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  /* identical to box height, or 150% */
 
-    letter-spacing: -0.2px;
+  letter-spacing: -0.2px;
 
-    color: #1B1C21;
-    cursor: pointer;
+  color: #1b1c21;
+  cursor: pointer;
 }
 
 .content__btn::before {
-    content: "";
-    display: flex;
-    width: 24px;
-    
-    margin-right: 8px;
-    height: 24px;
-    background-repeat: no-repeat;
-    background-image: url("data:image/svg+xml,%3Csvg width='8' height='11' viewBox='0 0 8 11' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M6.50008 0.500076L4.00008 3.00008L1.50008 0.500076C1.22393 0.223933 0.776218 0.223933 0.500076 0.500076C0.223933 0.776218 0.223933 1.22393 0.500075 1.50008L3.29297 4.29297C3.68349 4.68349 4.31666 4.68349 4.70718 4.29297L7.50008 1.50008C7.77622 1.22393 7.77622 0.776218 7.50008 0.500076C7.22393 0.223933 6.77622 0.223933 6.50008 0.500076ZM6.50008 6.50008L4.00008 9.00008L1.50008 6.50008C1.22393 6.22393 0.776218 6.22393 0.500076 6.50008C0.223933 6.77622 0.223933 7.22393 0.500075 7.50008L3.29297 10.293C3.68349 10.6835 4.31666 10.6835 4.70718 10.293L7.50008 7.50008C7.77622 7.22393 7.77622 6.77622 7.50008 6.50008C7.22393 6.22393 6.77622 6.22393 6.50008 6.50008Z' fill='%2341F6D7'/%3E%3C/svg%3E%0A");
-    background-position: center;
+  content: "";
+  display: flex;
+  width: 24px;
+
+  margin-right: 8px;
+  height: 24px;
+  background-repeat: no-repeat;
+  background-image: url("data:image/svg+xml,%3Csvg width='8' height='11' viewBox='0 0 8 11' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M6.50008 0.500076L4.00008 3.00008L1.50008 0.500076C1.22393 0.223933 0.776218 0.223933 0.500076 0.500076C0.223933 0.776218 0.223933 1.22393 0.500075 1.50008L3.29297 4.29297C3.68349 4.68349 4.31666 4.68349 4.70718 4.29297L7.50008 1.50008C7.77622 1.22393 7.77622 0.776218 7.50008 0.500076C7.22393 0.223933 6.77622 0.223933 6.50008 0.500076ZM6.50008 6.50008L4.00008 9.00008L1.50008 6.50008C1.22393 6.22393 0.776218 6.22393 0.500076 6.50008C0.223933 6.77622 0.223933 7.22393 0.500075 7.50008L3.29297 10.293C3.68349 10.6835 4.31666 10.6835 4.70718 10.293L7.50008 7.50008C7.77622 7.22393 7.77622 6.77622 7.50008 6.50008C7.22393 6.22393 6.77622 6.22393 6.50008 6.50008Z' fill='%2341F6D7'/%3E%3C/svg%3E%0A");
+  background-position: center;
 }
 
 .content__img {
-    min-width: 320px;
-    width: 100%;
+  min-width: 320px;
+  width: 100%;
 }
 
 .content__img img {
-    
-    min-width: 320px;
-    width: 100%;
+  min-width: 320px;
+  width: 100%;
 }
