--- a/min1120.css
+++ b/min1120.css
@@ -1,73 +1,97 @@
 @charset "utf-8";
 
 @media (min-width: 1120px) {
+  body {
+    width: 1120px;
+    margin: 0 auto;
+  }
+
   .header {
+    width: 100%;
     display: inline;
+    background: #f8f8f8;
+    justify-content: space-between;
   }
 
-  .header__btns--right > li > button > span {
-    display: flex;
+  .header__list {
+    justify-content: flex-end;
+    width: 40%;
+    float: right;
+    background: #f8f8f8;
+    column-gap: 32px;
+    padding-top: 24px;
   }
 
-  .header__btns--right > li > button {
-    width: 200px;
+  .header__item:not(.header__item:nth-last-child(1)):not(.header__item:nth-last-child(2)) {
+    display: none;
   }
 
-  .clearfix {
+  .header__item {
+    column-gap: 8px;
+    font-family: "TT Lakes";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    /* identical to box height, or 150% */
+
+    letter-spacing: -0.2px;
+
+    color: #1b1c21;
+  }
+
+  .header__item:nth-last-child(1)::before {
+    content: "Статус ремонта";
+    align-self: center;
+  }
+
+  .header__item:nth-last-child(2)::before {
+    content: "Оставить заявку";
+    align-self: center;
+  }
+
+  .clearfix::after {
     content: "";
     clear: both;
   }
 
   .header__title {
-    width: 50%;
+    width: 30%;
     float: left;
+    text-align: center;
+    display: flex;
   }
 
-  .header__nav-buttons {
-    width: 50%;
-    float: right;
-    background-color: #f8f8f8;
-  }
-
-  .header__buttons--left {
-    display: none;
-  }
-
-  .buttons__divider {
-    display: none;
-  }
-
-  .content__nav-slides {
+  .nav__slides {
     flex-wrap: wrap;
     overflow: hidden;
     row-gap: 15px;
   }
 
   .content {
+    width: 100%;
     align-items: flex-start;
-    column-gap: 36px;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    row-gap: 0px;
   }
 
   .content__block {
-    padding: 0px;
-    flex-direction: column;
-    width: 40%;
+    width: 45%;
+    padding: 24px;
   }
 
-  .content__block-text p {
-    line-height: 20px;
-  }
-
-  .content__block-text p:last-child {
-    display: flex;
-    overflow-y: hidden;
+  .content__block-text {
+    max-height: 160px;
   }
 
   .content__img {
-    width: 40%;
+    width: 45%;
+    padding: 24px;
   }
 
   .content__img img {
+    width: 80%;
     border-radius: 6px;
   }
 }
