--- a/reset_style.css
+++ b/reset_style.css
@@ -107,23 +107,12 @@ ol,
 ul {
   list-style: none;
 }
-blockquote,
-q {
-  quotes: none;
-}
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: "";
-  content: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
+
+button {
+  cursor: pointer;
+  background: none;
 }
 
 a {
   text-decoration: none;
-  color: #1b1c21;
 }
