--- a/min1120.css
+++ b/min1120.css
@@ -12,60 +12,57 @@
 
   .header {
     width: 100%;
-    display: flex;
-    justify-content: space-between;
-  }
-
-  .header__list {
-    width: auto;
-    justify-content: flex-end;
-    background: #f8f8f8;
-    column-gap: 32px;
+    display: inline-flex;
+    flex-wrap: nowrap;
     padding-top: 24px;
-    flex-grow: 1;
   }
 
-  .header__item:not(.header__item:nth-last-child(1)):not(
-      .header__item:nth-last-child(2)
-    ) {
+  .header__item:nth-child(1),
+  .header__item:nth-child(2) {
     display: none;
   }
 
-  .header__item {
-    column-gap: 8px;
-    font-family: "TT Lakes";
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 24px;
-    /* identical to box height, or 150% */
-
-    letter-spacing: -0.2px;
-
-    color: #1b1c21;
+  .btn__text {
+    display: flex;
   }
 
-  .header__item:nth-last-child(1)::before {
-    content: "Статус ремонта";
-    align-self: center;
+  .header__list {
+    background: #f8f8f8;
+    padding: 0;
+    flex-shrink: 2;
   }
 
-  .header__item:nth-last-child(2)::before {
-    content: "Оставить заявку";
-    align-self: center;
-  }
-
-  .clearfix::after {
+  .header::after {
+    position: absolute;
     content: "";
-    clear: both;
+    display: none;
+    width: 2px;
+    height: 32px;
+    right: 18%;
+    top: 28px;
+
+    background: #eaeaea;
+    border-radius: 1px;
+  }
+
+  .header::before {
+    position: absolute;
+    content: "";
+    display: none;
+    width: 2px;
+    height: 32px;
+    left: 9%;
+    top: 28px;
+
+    background: #eaeaea;
+    border-radius: 1px;
   }
 
   .header__title {
-    width: auto;
     text-align: center;
-    display: flex;
     order: -1;
-    flex-grow: 1;
+    padding: 0;
+    border-top: none;
   }
 
   .nav__slides {
@@ -75,7 +72,6 @@
   }
 
   .content {
-    width: 100%;
     align-items: flex-start;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -92,12 +88,11 @@
   }
 
   .content__img {
-    width: 45%;
     padding: 24px;
+    height: 383;
   }
 
   .content__img img {
-    width: 80%;
     border-radius: 6px;
   }
 }
