--- a/min768.css
+++ b/min768.css
@@ -1,13 +1,40 @@
 @media (min-width: 768px) and (max-width: 1119px) {
   .header__item:nth-child(2),
+  .header__item:nth-child(3),
   .header__item:nth-child(4),
   .header__item:nth-child(5),
   .header__item:nth-child(6) {
     display: flex;
   }
 
-  .header__item:nth-child(3) {
+  .header__item:nth-child(2) {
     flex-grow: 0.5;
+  }
+
+  .header::after {
+    position: absolute;
+    content: "";
+    display: flex;
+    width: 2px;
+    height: 32px;
+    right: 18%;
+    top: 28px;
+
+    background: #eaeaea;
+    border-radius: 1px;
+  }
+
+  .header::before {
+    position: absolute;
+    content: "";
+    display: flex;
+    width: 2px;
+    height: 32px;
+    left: 9%;
+    top: 28px;
+
+    background: #eaeaea;
+    border-radius: 1px;
   }
 
   .content {
@@ -24,12 +51,11 @@
   }
 
   .content__img {
-    width: 45%;
     padding: 24px;
+    height: 260;
   }
 
   .content__img img {
-    width: 80%;
     border-radius: 6px;
   }
 }
