--- a/swiper_services/services.css
+++ b/swiper_services/services.css
@@ -33,17 +33,16 @@
 }
 
 /* HEADER */
-body {
-  width: 100%;
+.services {
+  background: #f2f2f2;
 }
 
-.header {
-  width: 100%;
-  background: linear-gradient(90deg, #f8f8f8 0%, #ffffff 98.61%);
-  display: flex;
+.heading-gradient {
+  padding: 16px;
+  background: linear-gradient(100deg, #f8f8f8 0%, #ffffff 98.61%);
 }
 
-.header__title {
+.services__heading {
   display: flex;
   padding: 16px;
   font-family: "TT Lakes";
@@ -62,8 +61,6 @@ body {
 /* MAIN */
 .content {
   overflow: hidden;
-  width: 100%;
-  background: #f2f2f2;
   display: flex;
   flex-direction: column;
   row-gap: 24px;
@@ -99,14 +96,6 @@ body {
   align-items: center;
 }
 
-.swiper-button {
-  width: 40px;
-  height: 40px;
-  background: none;
-  border: 2px solid #ff3e79;
-  border-radius: 20px;
-}
-
 .swiper-wrapper::after {
   content: "";
   position: fixed;
@@ -125,6 +114,14 @@ body {
   position: relative !important;
 }
 
+.swiper-pagination-bullet {
+  background: #dddddd !important;
+}
+
+.swiper-pagination-bullet-active {
+  background: #b5b6bc !important;
+}
+
 /* BTN MORE */
 .content__btn-more {
   padding-bottom: 34px;
@@ -132,6 +129,7 @@ body {
   flex-direction: row;
   align-content: center;
   background: none;
+  column-gap: 9px;
 
   font-family: "TT Lakes";
   font-style: normal;
@@ -151,7 +149,6 @@ body {
   display: flex;
   width: 24px;
 
-  margin-right: 9px;
   height: 24px;
   background-repeat: no-repeat;
   background-image: url("data:image/svg+xml,%3Csvg width='8' height='11' viewBox='0 0 8 11' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M6.50008 0.500076L4.00008 3.00008L1.50008 0.500076C1.22393 0.223933 0.776218 0.223933 0.500076 0.500076C0.223933 0.776218 0.223933 1.22393 0.500075 1.50008L3.29297 4.29297C3.68349 4.68349 4.31666 4.68349 4.70718 4.29297L7.50008 1.50008C7.77622 1.22393 7.77622 0.776218 7.50008 0.500076C7.22393 0.223933 6.77622 0.223933 6.50008 0.500076ZM6.50008 6.50008L4.00008 9.00008L1.50008 6.50008C1.22393 6.22393 0.776218 6.22393 0.500076 6.50008C0.223933 6.77622 0.223933 7.22393 0.500075 7.50008L3.29297 10.293C3.68349 10.6835 4.31666 10.6835 4.70718 10.293L7.50008 7.50008C7.77622 7.22393 7.77622 6.77622 7.50008 6.50008C7.22393 6.22393 6.77622 6.22393 6.50008 6.50008Z' fill='%2341F6D7'/%3E%3C/svg%3E%0A");
