--- a/swiper_services/min768.css
+++ b/swiper_services/min768.css
@@ -4,6 +4,11 @@
     padding: 24px 10px 0 24px;
     height: 175px;
     overflow: hidden;
+    transition: height 0.5s;
+    -webkit-transition: height 0.5s;
+    -moz-transition: height 0.5s;
+    -ms-transition: height 0.5s;
+    -o-transition: height 0.5s;
   }
 
   .swiper-wrapper {
@@ -11,7 +16,6 @@
     row-gap: 16px;
     column-gap: 24px;
     padding: 0;
-    margin: 0 auto;
     justify-content: flex-start;
   }
 
@@ -21,7 +25,7 @@
   }
 
   #swiper.swiper-visible {
-    height: auto;
+    height: 344px;
     overflow-y: hidden;
   }
 
@@ -36,6 +40,14 @@
   .content__btn-more {
     display: flex;
     padding-left: 20px;
+  }
+
+  .content__btn-more::before {
+    transition: rotate 0.5s ease-in-out;
+    -webkit-transition: rotate 0.5s ease-in-out;
+    -moz-transition: rotate 0.5s ease-in-out;
+    -ms-transition: rotate 0.5s ease-in-out;
+    -o-transition: rotate 0.5s ease-in-out;
   }
 }
 
